--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,61 @@
 .viewport-height-50 {
   min-height: 50vh;
 }
+
+.flex-2 {
+  flex: 2 !important;
+}
+
+.map {
+  height: 40vh;
+  width: 100%;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
+
+.orderby-up,
+.orderby-down {
+  line-height: 0.6;
+  cursor: pointer;
+  color: #adadad;
+  transform: scale(1, 0.6);
+}
+
+.orderby-up a,
+.orderby-down a {
+  color: #adadad;
+  text-decoration: none;
+}
+
+.orderby-up.active a,
+.orderby-down.active a {
+  color: #000;
+}
+
+.page-404 {
+  padding: 80px;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.home-title {
+  padding: 80px;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.go-back {
+  cursor: pointer;
+  text-align: center;
+  color: #0d6efd;
+}
+
+.t-row:hover td {
+  color: #0d6efd !important;
+  cursor: pointer;
+}
