--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,3 +68,14 @@
   color: #0d6efd !important;
   cursor: pointer;
 }
+
+.search-filter {
+  justify-content: space-between;
+}
+.search-filter .input-group {
+  width: auto;
+}
+
+.pagination .page-link {
+  cursor: pointer;
+}
